# combinatorics

./: .gitignore  CMakeLists.txt  README.md
lw1/: CMakeLists.txt
lw1/backpack/: CMakeLists.txt  main.cpp
lw1/backpack/tests/: CMakeLists.txt  test.cpp
lw1/composition/: CMakeLists.txt  main.cpp
lw1/johnson_trotter/: CMakeLists.txt  main.cpp
lw1/narayana/: CMakeLists.txt  main.cpp
lw1/rand_permutation/: CMakeLists.txt  main.cpp
lw1/travelling_salesman/: CMakeLists.txt  main.cpp
